<resources>
    <!--Strings relacionados a campos-->
    <string name="app_name">Formulario</string>
    <string name="titulo">Mi Formulario</string>
    <string name="apPaterno">Apellido paterno</string>
    <string name="apMaterno">Apellido materno</string>
    <string name="nombres">Nombres</string>
    <string name="nacimiento">Fecha de nacimiento</string>
    <string name="colegioProcedencia">Colegio de procedencia</string>
    <string name="carrera">Carrera a la que postula</string>
    <!--Strings relacionados a botones-->
    <string name="Registrar">Registrar</string>



</resources>