<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/titulo"

    />
        <EditText
            android:id="@+id/apPaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/apPaterno"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/apMaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/apMaterno"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/nombres"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/nacimiento"
            android:inputType="date"
            />
        <EditText
            android:id="@+id/colegioProcedencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/colegioProcedencia"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/carrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/carrera"
            android:inputType="text"
            />
        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"/>
</LinearLayout>